yamaha-youth/assets/css/miss-classy.css
#miss-classy {
  background: url(../images/miss-classy/miss-classy-bg.jpg);
  background-attachment: fixed;
  background-position: top;
  background-size: 100vw;
  background-repeat: no-repeat;
  padding-top: 125px;
  background-color: #fff3e5;
}

/* Sidebar */

#miss-classy .sidebar-city-image-canvas {
  max-width: 360px;
  max-height: 360px;
  width: 100%;
  height: 100%;
  border-radius: 20px;
  overflow: hidden;
  position: relative;
}
#miss-classy .miss-classy-logo {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#miss-classy .sidebar-city-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
}
#miss-classy .miss-classy-desc {
  max-width: 360px;
  padding: 18px;
}
#miss-classy .sidebar-city-desc {
  position: relative;
  margin-top: -100px;
  border-radius: 8px;
  background-color: #b4dbf5;
  border: solid 2px #c0e7f5;
  color: #5180a2;
}
#miss-classy .sidebar-city-desc h3 {
  font-size: 20px;
  text-align: center;
}

#miss-classy .sidebar-city-desc .paragraph {
  background-color: #dff2ff;
  line-height: 1.2rem;
}
#miss-classy .accordion-button {
  background-color: #b4dbf5;
  color: #5180a2;
  font-weight: 600;
  letter-spacing: 0.05rem;
}
#miss-classy .accordion-body {
  background-color: #b4dbf5;
  padding: 1rem 1rem;
}
#miss-classy .accordion-body .list-container {
  background-color: #dff2ff;
  padding: 0.75rem;
  border-radius: 8px;
}
#miss-classy .accordion-body ol {
  font-size: 12px;
  font-weight: 400;
  line-height: 1.2rem;
  color: #5180a2;
  list-style: decimal;
  padding-left: 1.25rem;
}

/* Sidebar */

/* Miss-Classy Vote */
#miss-classy #pills-tab {
  background-color: #f0d6b7;
  max-width: 340px;
  width: 100%;
  border-radius: 8px;
}
#miss-classy #pills-tab button {
  font-size: 14px;
  padding: 12px 20px;
  width: 100%;
}

#miss-classy .vote-miss-classy-card {
  max-width: 280px;
  background-color: #b4dbf5;
  padding: 4px;
  border-radius: 20px;
  transition: all 0.2s ease-out;
}
#miss-classy .vote-miss-classy-card:hover {
  background-color: #f0952b;
}
#miss-classy .vote-miss-classy-card:hover h4,
#miss-classy .vote-miss-classy-card:hover span {
  color: white;
}
#miss-classy .vote-miss-classy-card:hover .vote-button {
  background-color: #ffdb4a;
  color: #cca62c;
}

#miss-classy .miss-classy-img-container {
  width: 100%;
  overflow: hidden;
  border-radius: 20px;
  position: relative;
}

#miss-classy .miss-classy-img-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
}
#miss-classy .vote-miss-classy-card h4 {
  color: #5180a2;
  font-size: 14px;
  font-weight: 600;
}
#miss-classy .vote-miss-classy-card span {
  color: #5180a2;
  font-size: 10px;
  font-weight: 400;
}
#miss-classy .vote-button {
  background-color: #f0952b;
  font-weight: 500;
  font-size: 14px;
  color: white;
  border: none;
  padding: 8px 12px;
  width: 100%;
}

#miss-classy .rank {
  background-color: #fccd0e;
  height: fit-content;
  padding: 4px 8px 4px 20px;
  border-radius: 8px 0px 0px 30px;
  font-family: Outfit, Fredoka, sans-serif;
  font-size: 24px;
  font-weight: 600;
  line-height: 30px;
  letter-spacing: -0.02em;
  text-align: right;
}
#miss-classy .ranked-miss-classy {
  width: 100%;
  background-color: #f0952b;
  padding: 12px;
  border-radius: 0px 20px 20px 20px;
  gap: 16px;
}

#miss-classy .leaderboard-container {
  padding: 0 18px;
}
#miss-classy .leaderboard-img-container {
  max-width: 50px;
  max-height: 50px;
  width: 100%;
  height: 100%;
  border-radius: 12px;
  overflow: hidden;
  position: relative;
}

#miss-classy .leaderboard-img-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
}
#miss-classy .miss-classy-data {
  gap: 16px;
}
#miss-classy .leaderboard-data {
  display: flex;
  flex-direction: column;
  width: 100%;

  overflow-x: hidden;
  overflow-y: hidden;
  white-space: nowrap;
  justify-content: center; /* Center the content horizontally */
  align-items: start; /* Center the content vertically */
}
#miss-classy .miss-classy-data h4 {
  font-size: 14px;
  font-weight: 500;
  line-height: 17px;
  letter-spacing: 0em;

  /* hidden overflow data */
  width: 100%;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
}
#miss-classy .miss-classy-data span {
  font-size: 10px;
  font-weight: 300;
  line-height: 12px;
  letter-spacing: 0em;
  text-align: center;

  /* hidden overflow data */
  width: 100%;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
#miss-classy .leaderboard-vote {
  font-family: Outfit, Fredoka, sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 25px;
  text-align: center;
}

.leaderboard-container,
.vote-card-container {
  display: flex;
}

#miss-classy .miss-classy-vote .nav-link {
  height: 100%;
}
#miss-classy .first-three-leaderboard {
  color: white;
}
#miss-classy .first-three-leaderboard .rank {
  background-color: #fccd0e;
}
#miss-classy .first-three-leaderboard .ranked-miss-classy {
  background-color: #f0952b;
}

#miss-classy .default-leaderboard {
  color: #5180a2;
}
#miss-classy .default-leaderboard .rank {
  background-color: #d2c58c;
  color: white;
}
#miss-classy .default-leaderboard .ranked-miss-classy {
  background-color: #b4dbf5;
}

#miss-classy .vote-button.voted {
  background-color: #5e900d;
  color: #e0ff48;
}

#miss-classy .vote-miss-classy-card .modal h3 {
  font-size: 24px;
  font-weight: 600;
  line-height: 24px;
  letter-spacing: 0px;
  color: #5182a2;
}
#miss-classy .vote-miss-classy-card .modal .modal-text-content {
  width: 50%;
  margin-top: 2rem;
}
#miss-classy .vote-miss-classy-card .modal h5 {
  color: #1f2937;
  font-family: Fredoka;
  font-size: 16px;
  font-weight: 600;
  line-height: 24px;
  letter-spacing: 0px;
  text-align: center;
}
#miss-classy .vote-miss-classy-card .modal span {
  font-family: Fredoka;
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  letter-spacing: 0px;
  text-align: center;
  color: #81889c;
}
#miss-classy .vote-miss-classy-card .modal .modal-cta {
  background-color: #f0952b;
  color: white;
  padding: 8px 20px;
  border: none;
}

@media (max-width: 1200px) {
  #miss-classy .vote-miss-classy-card {
    max-width: 240px;
  }
}
@media (max-width: 997px) {
  #miss-classy .vote-miss-classy-card {
    max-width: 155px;
  }
}
@media (max-width: 576px) {
  #miss-classy .sidebar-city-image-canvas {
    max-width: none;
    max-height: none;
    width: 100%;
    height: 100%;
    border-radius: 0;
  }
  #miss-classy .miss-classy-desc {
    max-width: none;
    padding: 18px;
  }
  #miss-classy {
    padding-top: 0px;
  }
  #miss-classy .miss-classy-vote {
    padding: 0 18px;
  }
}

@media (max-width: 350px) {
  #miss-classy .vote-miss-classy-card {
    max-width: 125px;
  }
}

